add a -d flag to dpkg
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1954 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -393,6 +393,7 @@
         <arg value="-us"/>
         <arg value="-uc"/>
         <arg value="-b"/>
+        <arg value="-d"/>
       </exec>
 
       <mkdir dir="${debian.dir}"/>
