--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -43,16 +43,10 @@
 
     <!-- Put here the Windows release directory -->
     <property name="windows.app.dir" value="${basedir}/${release}/windows"/>
-    <!-- Put here the Windows Application version -->
-    <property name="windows.app.ver" value="1.0.alpha1"/>
     <!-- Put here the Linux release directory -->
     <property name="linux.app.dir" value="${basedir}/${release}/linux"/>
-    <!-- Put here the Linux Application version -->
-    <property name="linux.app.ver" value="1.0.alpha1"/>
     <!-- Put here the Generic release directory -->
     <property name="generic.app.dir" value="${basedir}/${release}/generic"/>
-    <!-- Put here the Generic Application version -->
-    <property name="generic.app.ver" value="1.0.alpha1"/>
 
     <!-- change the 7zip executable corresponding the OS
          7-zip is used to create windows self-extract installer binary
@@ -83,10 +77,10 @@
     </target>
 
     <target name="build-installation-generic"
-            depends="clean-install-generic,define-izpack-task">
+            depends="clean-install-generic,define-izpack-task,version">
         <izpack
                input="${basedir}/${inst.resrc}/generic/installer-generic.xml"
-               output="${generic.app.dir}/sip-communicator-${generic.app.ver}.jar"
+               output="${generic.app.dir}/sip-communicator-${sip-communicator.version}.jar"
                installerType="standard"
                izPackDir="${izpack.dir}/"
                basedir="${basedir}"/>
@@ -99,7 +93,7 @@
     </target>
 
     <target name="build-installation-linux"
-            depends="clean-install-linux,define-izpack-task">
+            depends="clean-install-linux,define-izpack-task,version">
         <copy todir="${linux.app.dir}/tmp">
             <fileset dir="${basedir}/${inst.resrc}/linux">
                 <include name="setup.sh"/>
@@ -113,7 +107,7 @@
     </copy>
         <!-- create izpack installer jar file -->
         <izpack input="${basedir}/${inst.resrc}/linux/installer-linux.xml"
-                output="${linux.app.dir}/tmp/sip-communicator-${linux.app.ver}-linux.jar"
+                output="${linux.app.dir}/tmp/sip-communicator-${sip-communicator.version}-linux.jar"
                 installerType="standard"
                 basedir="${basedir}"
                 izPackDir="${izpack.dir}/"/>
@@ -123,7 +117,7 @@
              basedir="${linux.app.dir}/tmp"/>
         <gzip zipfile="${linux.app.dir}/tmp/install.tar.gz"
               src="${linux.app.dir}/tmp/install.tar"/>
-        <concat destfile="${linux.app.dir}/sip-communicator-${linux.app.ver}-linux.bin"
+        <concat destfile="${linux.app.dir}/sip-communicator-${sip-communicator.version}-linux.bin"
                 binary="true">
             <fileset dir="${basedir}/${inst.resrc}/linux/">
                 <include name="sfx-header"/>
@@ -132,7 +126,7 @@
                 <include name="install.tar.gz"/>
             </fileset>
         </concat>
-        <chmod file="${linux.app.dir}/sip-communicator-${linux.app.ver}-linux.bin" perm="+x"/>
+        <chmod file="${linux.app.dir}/sip-communicator-${sip-communicator.version}-linux.bin" perm="+x"/>
 
         <!-- Delete the temp directory-->
         <delete dir="${linux.app.dir}/tmp"/>
@@ -146,7 +140,7 @@
     </target>
 
     <target name="build-installation-windows"
-            depends="clean-install-windows,define-izpack-task">
+            depends="clean-install-windows,define-izpack-task,version">
         <copy todir="${windows.app.dir}/tmp">
             <fileset dir="${basedir}/${inst.resrc}/windows">
                 <include name="launcher.ini"/>
@@ -160,19 +154,19 @@
 
         <izpack
                input="${basedir}/${inst.resrc}/windows/installer-windows.xml"
-               output="${windows.app.dir}/tmp/sip-communicator-${windows.app.ver}-windows.jar"
+               output="${windows.app.dir}/tmp/sip-communicator-${sip-communicator.version}-windows.jar"
                installerType="standard"
                basedir="${basedir}"
                izPackDir="${izpack.dir}/"/>
 
-        <zip destfile="${windows.app.dir}/sip-communicator-${windows.app.ver}-windows.zip"
+        <zip destfile="${windows.app.dir}/sip-communicator-${sip-communicator.version}-windows.zip"
                 basedir="${windows.app.dir}/tmp"/>
 
         <!--exec dir="${windows.app.dir}/tmp" executable="${7zip.executable}" failifexecutionfails="false">
             <arg line="a -y data.7z *"/>
         </exec>
 
-        <concat destfile="${windows.app.dir}/setup-sip-communicator-${windows.app.ver}.exe"
+        <concat destfile="${windows.app.dir}/setup-sip-communicator-${sip-communicator.version}.exe"
                 binary="true">
             <fileset dir="${basedir}/${inst.resrc}/windows">
                 <include name="7zS.sfx"/>
