add jspeex to media bundle
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1978 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -808,6 +808,7 @@
                 prefix="net/java/sip/communicator/impl/media"/>
             <zipfileset src="${jmf.home}/jmf.jar" prefix=""/>
             <zipfileset src="${lib}/nist-sdp-1.0.jar" prefix=""/>
+             <zipfileset src="${lib}/jspeex.jar" prefix=""/>
         </jar>
     </target>
 
