Fix windows installation and overriding files
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1981 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -154,7 +154,7 @@
 
         <izpack
                input="${basedir}/${inst.resrc}/windows/installer-windows.xml"
-               output="${windows.app.dir}/tmp/sip-communicator-${sip-communicator.version}-windows.jar"
+               output="${windows.app.dir}/tmp/sip-communicator-windows.jar"
                installerType="standard"
                basedir="${basedir}"
                izPackDir="${izpack.dir}/"/>
