--- a/resources/install/windows/launcher.ini
+++ b/resources/install/windows/launcher.ini
@@ -1,4 +1,4 @@
-jar = sip-communicator-1.0.alpha1-windows.jar
+jar = sip-communicator-windows.jar
 download = http://java.sun.com/j2se/1.4.2/download.html
 
 [win32]
