Start MSN tests!
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1989 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -12,7 +12,8 @@ net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
  MsgHistoryServiceLick \
  CallHistoryServiceLick \
  JabberProtocolProviderSlick \
- IcqProtocolProviderSlick
+ IcqProtocolProviderSlick \
+ MsnProtocolProviderSlick
 
 # MediaServiceLick \
 
