Fixed linux-generic installation as izPack loose option is not working.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2013 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -97,6 +97,7 @@
         <copy todir="${linux.app.dir}/tmp">
             <fileset dir="${basedir}/${inst.resrc}/linux">
                 <include name="setup.sh"/>
+                <include name="inst_path"/>
             </fileset>
     </copy>
         <!-- copy the jre -->
