--- a/ide/eclipse/.project
+++ b/ide/eclipse/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SIP Communicator</name>
+	<name>sip-communicator-1-0-draft</name>
 	<comment></comment>
 	<projects>
 	</projects>
