No idea why I was able to trash the master copy of this file - here is the restore!
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2057 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -2,22 +2,20 @@
 # environment when running automated testing.
 
 # A list of all tests that should be run by the test target of the project.
-net.java.sip.communicator.slick.runner.TEST_LIST=SipProtocolProviderServiceLick
+net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
+ MetaContactListServiceLick \
+ SipProtocolProviderServiceLick \
+ NetworkAddressManagerServiceLick \
+ FileAccessServiceLick \
+ HistoryServiceLick \
+ SlicklessTests \
+ MsgHistoryServiceLick \
+ CallHistoryServiceLick \
+ JabberProtocolProviderSlick \
+ IcqProtocolProviderSlick \
+ MsnProtocolProviderSlick
 
-# A list of all tests that could be run by the test target of the project.
-#net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
-# MetaContactListServiceLick \
-# SipProtocolProviderServiceLick \
-# NetworkAddressManagerServiceLick \
-# FileAccessServiceLick \
-# HistoryServiceLick \
-# SlicklessTests \
-# MsgHistoryServiceLick \
-# CallHistoryServiceLick \
-# JabberProtocolProviderSlick \
-# IcqProtocolProviderSlick \
-# MsnProtocolProviderSlick
-#### MediaServiceLick \
+# MediaServiceLick \
 
 # Set the name of the meta contact list file to use during testing so that
 # we do not meddle with the file we're using while running the application
