--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -57,6 +57,7 @@ felix.auto.start.4= \
  file:sc-bundles/protocol-jabber.jar \
  file:sc-bundles/protocol-msn.jar \
  file:sc-bundles/protocol-sip.jar \
+ file:sc-bundles/protocol-yahoo.jar \
  file:sc-bundles/media.jar \
  file:sc-bundles/meta-cl.jar \
  file:sc-bundles/msghistory.jar \
@@ -76,6 +77,7 @@ felix.auto.start.5= \
  file:sc-bundles/protocol-sip-slick.jar \
  file:sc-bundles/protocol-jabber-slick.jar \
  file:sc-bundles/protocol-msn-slick.jar \
+ file:sc-bundles/protocol-yahoo-slick.jar \
  file:sc-bundles/msghistory-slick.jar \
  file:sc-bundles/callhistory-slick.jar
 
