--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -57,6 +57,7 @@ felix.auto.start.3= \
  reference:file:sc-bundles/protocol-sip.jar \
  reference:file:sc-bundles/protocol-jabber.jar \
  reference:file:sc-bundles/protocol-msn.jar \
+ reference:file:sc-bundles/protocol-yahoo.jar \
  reference:file:sc-bundles/netaddr.jar \
  reference:file:sc-bundles/meta-cl.jar
 
@@ -74,6 +75,7 @@ felix.auto.start.4= \
  reference:file:sc-bundles/sipaccregwizz.jar \
  reference:file:sc-bundles/jabberaccregwizz.jar \
  reference:file:sc-bundles/msnaccregwizz.jar \
+ reference:file:sc-bundles/yahooaccregwizz.jar \
  reference:file:sc-bundles/shutdown.jar
 
 # Uncomment the following lines if you want to run the architect viewer
