--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -13,7 +13,8 @@ net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
  CallHistoryServiceLick \
  JabberProtocolProviderSlick \
  IcqProtocolProviderSlick \
- MsnProtocolProviderSlick
+ MsnProtocolProviderSlick \
+ YahooProtocolProviderSlick
 
 # MediaServiceLick \
 
