Moving back to version 1.6 of rules cause apparently I got something wrong with my last update.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2081 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/debian/rules
+++ b/resources/install/debian/rules
@@ -61,7 +61,7 @@ install: build
 	rm debian/sip-communicator/usr/share/sip-communicator/sc-bundles/*-slick.jar
 
 	# Make felix deploy its bundles in ~/.felix/sip-communicator.bin
-	sed -i -e "s/felix.cache.profiledir=sip-communicator.bin/felix.cache.profiledir=\${user.home}\/.sip-communicator\/plugins/" debian/sip-communicator/usr/share/sip-communicator/lib/felix.client.run.properties
+	sed -i -e "s/felix.cache.profiledir=sip-communicator.bin/felix.cache.profile=sip-communicator.bin/" debian/sip-communicator/usr/share/sip-communicator/lib/felix.client.run.properties
 
 
 # Build i386 files here.
