--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -64,7 +64,8 @@ felix.auto.start.3= \
 felix.auto.start.4= \
  reference:file:sc-bundles/history.jar \
  reference:file:sc-bundles/msghistory.jar \
- reference:file:sc-bundles/callhistory.jar
+ reference:file:sc-bundles/callhistory.jar \
+ reference:file:sc-bundles/audionotifier.jar
 
 
  felix.auto.start.66= \
