Stopping yahoo tests
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2108 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -5,7 +5,6 @@
 net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
  MetaContactListServiceLick \
  SipProtocolProviderServiceLick \
- YahooProtocolProviderSlick \
  NetworkAddressManagerServiceLick \
  FileAccessServiceLick \
  HistoryServiceLick \
@@ -16,6 +15,7 @@ net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
  IcqProtocolProviderSlick \
  MsnProtocolProviderSlick
 
+# YahooProtocolProviderSlick \
 # MediaServiceLick \
 
 # Set the name of the meta contact list file to use during testing so that
