--- a/build.xml
+++ b/build.xml
@@ -358,7 +358,7 @@
                   name="${macosx.app.name}"
                   shortname="SIP Communicator"
                   signature="sipc"
-                  mainclass="org.apache.felix.main.Main"
+                  mainclass="net.java.sip.communicator.launcher.SIPCommunicator"
                   icon="src/net/java/sip/communicator/impl/gui/resources/common/logo/sc_logo_128x128.icns"
                   jvmversion="1.4+"
                   version="${sip-communicator.version}"
@@ -433,7 +433,7 @@
       </exec>
 
       <!-- Put the current date in the changelog -->
-	  <exec executable="/bin/date"
+      <exec executable="/bin/date"
           outputproperty="date" >
         <arg value="-R"/>
       </exec>
@@ -642,7 +642,7 @@
             <sysproperty key="java.net.preferIPv6Addresses"
                 value="true"/>
 
-        	<!-- Setting properties necessary for dependencies on native libs.-->
+            <!-- Setting properties necessary for dependencies on native libs.-->
             <sysproperty key="java.library.path" value="${ld.library.path}:${path}"/>
             <env key="LD_LIBRARY_PATH" value="${ld.library.path}"/>
             <env key="PATH" value="${path}"/>
@@ -1069,7 +1069,7 @@ javax.swing.event, javax.swing.border"/>
             <zipfileset src="${lib}/commons-logging.jar" prefix=""/>
         </jar>
     </target>
-    
+
         <!-- BUNDLE-YAHOO -->
     <target name="bundle-yahoo">
         <!-- Creates a bundle containing the yahoo impl of the protocol provider.-->
@@ -1165,7 +1165,7 @@ javax.swing.event, javax.swing.border"/>
                 prefix="net/java/sip/communicator/plugin/msnaccregwizz"/>
         </jar>
     </target>
-    
+
     <!-- BUNDLE-PLUGIN-YAHOOACCREGWIZZ -->
     <target name="bundle-plugin-yahooaccregwizz">
         <!-- Creates a bundle for the plugin Yahoo Account Registration Wizard.-->
@@ -1235,28 +1235,28 @@ javax.swing.event, javax.swing.border"/>
                 prefix="net/java/sip/communicator/impl/growlnotification" />
         </jar>
     </target>
-	
-	<!--BUNDLE-AUDIO NOTIFIER-->
+
+    <!--BUNDLE-AUDIO NOTIFIER-->
     <target name="bundle-audionotifier">
         <!-- Creates a bundle for the audio notifier service.-->
         <jar compress="false" destfile="${bundles.dest}/audionotifier.jar"
             manifest="src/net/java/sip/communicator/impl/audionotifier/audionotifier.manifest.mf">
-        	<zipfileset dir="${dest}/net/java/sip/communicator/service/audionotifier"
-        	                prefix="net/java/sip/communicator/service/audionotifier"/>
+            <zipfileset dir="${dest}/net/java/sip/communicator/service/audionotifier"
+                            prefix="net/java/sip/communicator/service/audionotifier"/>
             <zipfileset dir="${dest}/net/java/sip/communicator/impl/audionotifier"
                 prefix="net/java/sip/communicator/impl/audionotifier" />
-        	<zipfileset dir="resources/sounds"
-        	                prefix="resources/sounds"/>
+            <zipfileset dir="resources/sounds"
+                            prefix="resources/sounds"/>
         </jar>
     </target>
-	
-	<!-- BUNDLE-PLUGIN-EXAMPLE PLUGIN -->
-	    <target name="bundle-plugin-exampleplugin">
-	        <!-- Creates a bundle for the plugin SIP Account Registration Wizard.-->
-	        <jar compress="false" destfile="${bundles.dest}/exampleplugin.jar"
-	            manifest="src/net/java/sip/communicator/plugin/exampleplugin/exampleplugin.manifest.mf">
-	            <zipfileset dir="${dest}/net/java/sip/communicator/plugin/exampleplugin"
-	                prefix="net/java/sip/communicator/plugin/exampleplugin"/>
-	        </jar>
-	    </target>
+
+    <!-- BUNDLE-PLUGIN-EXAMPLE PLUGIN -->
+        <target name="bundle-plugin-exampleplugin">
+            <!-- Creates a bundle for the plugin SIP Account Registration Wizard.-->
+            <jar compress="false" destfile="${bundles.dest}/exampleplugin.jar"
+                manifest="src/net/java/sip/communicator/plugin/exampleplugin/exampleplugin.manifest.mf">
+                <zipfileset dir="${dest}/net/java/sip/communicator/plugin/exampleplugin"
+                    prefix="net/java/sip/communicator/plugin/exampleplugin"/>
+            </jar>
+        </target>
 </project>
